# ai-challenge-fmc

./: LICENSE  README.md
guardrail-auditor/: README.md  STAKEHOLDER_OVERVIEW.md  Untitled  prompts.md  pyproject.toml
guardrail-auditor/app/: __init__.py  db.py  iac_nav.py  main.py  models.py  scan_service.py  schemas.py  scoring.py
guardrail-auditor/app/parsers/: __init__.py  cloudformation.py  terraform.py
guardrail-auditor/app/routes/: rules.py  scans.py
guardrail-auditor/app/rules/: __init__.py  aws_iam.py  aws_network.py  aws_s3.py  azure_network.py  azure_storage.py  base.py
guardrail-auditor/dashboard/: app.py
guardrail-auditor/fixtures/: insecure.cfn.yaml  insecure_aws.tf  insecure_azure.tf  secure_aws.tf
guardrail-auditor/guardrail_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
guardrail-auditor/tests/: conftest.py  test_api.py  test_rules_fixtures.py  test_scoring.py
